--- a/yaapp/templates/yabase/app/radioCell.mustache
+++ b/yaapp/templates/yabase/app/radioCell.mustache
@@ -1,5 +1,5 @@
 {% load i18n %}
-<div class='radio-cell thumbnail'>
+<div class='thumbnail'>
     <img src='<% picture %>' width='100px' height='100px'/>
     <div class='caption'>
         <h5><% name %></h5>
