--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -23,6 +23,7 @@
     <script type="text/javascript" src='/media/js/mustache-django-friendly.js'></script>
     <script type="text/javascript" src='/media/js/ICanHaz-no-mustache.min.js'></script>
     <script type="text/javascript" src='/media/js/underscore-1.3.1.js'></script>
+    <script type="text/javascript" src='/media/js/underscore.string.min.js'></script>
     <script type="text/javascript" src='/media/js/backbone-min.js'></script>
     <script type="text/javascript" src='/media/js/backbone-tastypie.js'></script>
     <script type="text/javascript" src='/media/js/backbone.paginator.js'></script>
@@ -202,8 +203,7 @@
       </div>
     </div>
     
-<div class='container-fluid' id='webapp-content'>{% block content%}{%endblock%}
-</div>
+<div class='container-fluid' id='webapp-content'>{% block content%}{%endblock%}</div>
 <div class='container-fluid'>
     <hr>
     <footer>
