--- a/yaapp/templates/yabase/app/favoritesPage.mustache
+++ b/yaapp/templates/yabase/app/favoritesPage.mustache
@@ -1,7 +1,7 @@
 {% load i18n %}
 <div class='span12'>
     <h1>{% trans "My favorites" %}</h1>
-    <ul id='results'>
+    <ul id='results' class='thumbnails'>
     <img class='loading-mask' src='/media/images/loading.gif'/>
     </ul>
     <div class='cell-pagination' id='pagination'></div>
