--- a/yaapp/templates/yabase/app/home/homePage.mustache
+++ b/yaapp/templates/yabase/app/home/homePage.mustache
@@ -1,30 +1,30 @@
 {% load i18n %}
 <div class='row-fluid'>
     <div class='span12'>
-        <h1>Homepage</h1>
-    </div>
-</div>    
-
-<div class='row-fluid'>
-    <div class='span12'>
-        <h2>{% trans "Selection" %}</h2>
-        <ul id='selected-radios'>
+        <div class='page-header'>
+        <h1>{% trans "Selection" %}</h1>
+        </div>
+        <ul id='selected-radios' class='thumbnails'>
             <img class='loading-mask' src='/media/images/loading.gif'/>
         </ul>
     </div>
 </div>    
 <div class='row-fluid'>
     <div class='span12'>
-        <h2>{% trans "Most popular radios today" %}</h2>
-        <ul id='most-active-radios'>
+        <div class='page-header'>
+        <h1>{% trans "Most popular radios today" %}</h1>
+        </div>
+        <ul id='most-active-radios' class='thumbnails'>
             <img class='loading-mask' src='/media/images/loading.gif'/>
         </ul>
     </div>
 </div>
 <div class='row-fluid'>
     <div class='span12'>
-        <h2>{% trans "My favorites" %}</h2>
-        <ul id='favorites'>
+        <div class='page-header'>
+        <h1>{% trans "My favorites" %}</h1>
+        </div>
+        <ul id='favorites' class='thumbnails'>
             <img class='loading-mask' src='/media/images/loading.gif'/>
         </ul>
         <div class='cell-pagination' id='pagination'></div>
