fixed missing class for list of users

--- a/yaapp/templates/yabase/app/profile/profilePage.mustache
+++ b/yaapp/templates/yabase/app/profile/profilePage.mustache
@@ -17,7 +17,7 @@
 
 <div class='span12'>
     <h2>{% trans "Favorites" %}</h2>
-    <ul id='favorites'></ul>
+    <ul id='favorites' class='thumbnails'></ul>
     <div class='cell-pagination' id='pagination'></div>
 </div>
 </div>
