--- a/yaapp/templates/yabase/app/searchPage.mustache
+++ b/yaapp/templates/yabase/app/searchPage.mustache
@@ -1,4 +1,4 @@
 <div class='span12'>
-    <ul id='results'></ul>
+    <ul id='results' class='thumbnails'></ul>
     <div id='pagination'></div>
 </div>
