facebook open graph : added i18n stuff

--- a/yaapp/templates/yabase/app/radio/radio.html
+++ b/yaapp/templates/yabase/app/radio/radio.html
@@ -8,7 +8,8 @@
   <meta property="og:title"  content="{{ radio|striptags }}" /> 
   <meta property="og:image"  content="{{ radio_picture_absolute_url }}" /> 
   <meta property="og:audio"  content="{{ radio.stream_url }}" /> 
-  <meta property="og:audio:type" content="audio/mpeg" />
+  <meta property="og:audio:type" content="application/mp3" />
+  <meta property="og:locale:alternate" content="fr_FR" />
 {% endblock %}
 
 
