--- a/yaapp/templates/yabase/listen.html
+++ b/yaapp/templates/yabase/listen.html
@@ -12,6 +12,7 @@
   <meta property="og:image"  content="{{ radio_picture_absolute_url }}" /> 
   <meta property="og:audio"  content="{{ request.build_absolute_uri }}" /> 
   <meta property="og:audio:type" content="application/mp3" />
+  <meta property="og:locale:alternate" content="fr_FR" />
 {% endblock %}
 
 
