--- a/yaapp/templates/yabase/song.html
+++ b/yaapp/templates/yabase/song.html
@@ -13,6 +13,7 @@
   <meta property="og:audio"  content="{{ radio.stream_url }}" /> 
   <meta property="og:audio:type" content="application/mp3" />
   <meta property="{{ FACEBOOK_APP_NAMESPACE}}:radio_station" content="{{ radio_station_url }}" />
+  <meta property="og:locale:alternate" content="fr_FR" />
 {% endblock %}
 
 
