--- a/yaapp/templates/yabase/app/settings/settingsPage.mustache
+++ b/yaapp/templates/yabase/app/settings/settingsPage.mustache
@@ -1,7 +1,7 @@
 {% load i18n %}
 <div class='row-fluid'>
     <div class='span12'>
-        <h1>Settings</h1>
+        <h1>{% trans "Settings" %}</h1>
     </div>
  </div>
 
@@ -27,7 +27,7 @@
             <p>{% trans "Do you want to remove your facebook account ?" %}</p>
           </div>
           <div class="modal-footer">
-            <a href="#" class="btn" data-dismiss="modal">{% trans "No thank" %}</a>
+            <a href="#" class="btn" data-dismiss="modal">{% trans "No thank you" %}</a>
             <a href="#" class="btn btn-primary">{% trans "Yes i want" %}</a>
           </div>
         </div>        
@@ -52,7 +52,7 @@
             <p>{% trans "Do you want to remove your twitter account ?" %}</p>
           </div>
           <div class="modal-footer">
-            <a href="#" class="btn" data-dismiss="modal">{% trans "No thank" %}</a>
+            <a href="#" class="btn" data-dismiss="modal">{% trans "No thank you" %}</a>
             <a href="#" class="btn btn-primary">{% trans "Yes i want" %}</a>
           </div>
         </div>        
