--- a/yaapp/templates/yabase/app/home/homePage.mustache
+++ b/yaapp/templates/yabase/app/home/homePage.mustache
@@ -22,7 +22,7 @@
 <div class='row-fluid'>
     <div class='span12'>
         <div class='page-header'>
-        <h1>{% trans "My favorites" %}</h1>
+        <h1><a href='{% url webapp_favorites %}' id='favorites-link'>{% trans "My favorites" %}</a></h1>
         </div>
         <ul id='favorites' class='thumbnails'>
             <img class='loading-mask' src='/media/images/loading.gif'/>
