--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="/media/css/flashblock.css"/>
     <link rel="stylesheet" href="/media/css/webapp.css"/>
     <link rel="stylesheet" href="/media/css/auth-buttons.css"/>
+    <link rel="stylesheet" href="/media/js/colibri/colibri.css"/>
     
     <script type="text/javascript" src='/media/js/jquery-1.7.1.min.js'></script>
     <script type="text/javascript" src='/media/js/jquery.timers.js'></script>
@@ -31,6 +32,7 @@
     <script type="text/javascript" src='/media/js/socket.io.js'></script>
     <script type="text/javascript" src='/media/js/pubsub.js'></script>
     <script type="text/javascript" src='/media/js/Namespace.js'></script>
+    <script type="text/javascript" src='/media/js/colibri/colibri.js'></script>
 
     
     {% compressed_js 'webapp-all' %}
