added facebook channel html

--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -125,9 +125,10 @@
 
 <div id="fb-root"></div>
 <script>
-/*   window.fbAsyncInit = function() {
+   window.fbAsyncInit = function() {
     FB.init({
       appId      : '{{ facebook_app_id }}', // App ID
+      channelUrl : '{{ facebook_channel_url }}',
       status     : true, // check login status
       cookie     : true, // enable cookies to allow the server to access the session
       xfbml      : true  // parse XFBML
@@ -144,7 +145,7 @@
      js.src = "//connect.facebook.net/en_US/all.js";
      ref.parentNode.insertBefore(js, ref);
    }(document));
- */</script>
+ </script>
 
 
 
