--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -39,6 +39,10 @@ body {
 	margin-top:2px;
 }
 
+#profile-radios {
+    margin-top: 24px;
+	
+}
 #webapp-radio {
     margin-top: 24px;
     background-color: #F5F5F5;
