added messages per user metric

--- a/yaapp/templates/yabackoffice/keyfigures.html
+++ b/yaapp/templates/yabackoffice/keyfigures.html
@@ -63,6 +63,14 @@
         </tr>
         <tr>
             <td>
+                {% trans "Messages per user" %}
+            </td>
+            <td>
+            {{messages_per_user}}
+            </td>
+        </tr>
+        <tr>
+            <td>
                 {% trans "Like count" %}
             </td>
             <td>
