yametrics: added like stats

--- a/yaapp/templates/yabackoffice/keyfigures.html
+++ b/yaapp/templates/yabackoffice/keyfigures.html
@@ -79,6 +79,14 @@
         </tr>
         <tr>
             <td>
+                {% trans "Likes per user" %}
+            </td>
+            <td>
+            {{likes_per_user}}
+            </td>
+        </tr>
+        <tr>
+            <td>
                 {% trans "Favorites count" %}
             </td>
             <td>
