--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -156,8 +156,16 @@
           
           <div class="nav-collapse">
             <div class='pull-right'>
-                <div class="btn-group " id='user-menu'>            
+                <div id='user-menu' class='btn-toolbar'>            
                 {% if request.user.is_authenticated %}
+                        <div class='btn-group'>
+                        <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
+                        <i class="icon-eye-open"></i>
+                           {% trans "Notifications" %}
+                        <span class="caret"></span> </a>
+                        </div>
+                                                
+                        <div class='btn-group'>
                         <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
                         <i class="icon-user"></i>
                             {{ request.user.userprofile }} 
@@ -174,6 +182,7 @@
                             <li class="divider"></li>
     						<li><a href="{% url logout %}">{% trans "Logout" %}</a></li>
 						</ul>
+						</div>
                 {% else %}
                         <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
                         <i class="icon-user"></i>
@@ -187,6 +196,8 @@
                     </form>
                 </div>    
             </div>
+
+
           </div><!--/.nav-collapse -->
             <div id='webapp-player'>
             </div>
