--- a/yaapp/templates/yabackoffice/radio_tags.html
+++ b/yaapp/templates/yabackoffice/radio_tags.html
@@ -26,7 +26,7 @@
 		{% for tag in tags %}
         <tr>
             <td>
-                {{ tag }}
+                "{{ tag }}"
             </td>
             <td>
                 {{ tag.num_times }}
