--- a/yaapp/templates/yabackoffice/radio_tags.html
+++ b/yaapp/templates/yabackoffice/radio_tags.html
@@ -17,7 +17,7 @@
     <tbody>
         <tr>
             <td>
-                {% trans "Number of tags" %}
+                {% trans "Tags count" %}
             </td>
             <td>
                 {{ tags.count }}
