wip on notifications
* standardized response from server (with metadata objects)
* added basic web view

--- a/yaapp/templates/yabase/app/notifications/notificationsPage.mustache
+++ b/yaapp/templates/yabase/app/notifications/notificationsPage.mustache
@@ -1,6 +1,9 @@
 {% load i18n %}
 <div class='row-fluid'>
 	<div class='span12'>
-	    hello, world
+	    <h1>{% trans "Notifications" %}</h1>
+        <ul id='notifications'></ul>
+        </div>
+        <div id='pagination'></div>
 	</div>
 </div>
