--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -121,6 +121,10 @@
    <script type="text/html" id="notificationsPageTemplate">
       {% include "yabase/app/notifications/notificationsPage.mustache" %}
    </script>
+   
+   <script type="text/html" id="notificationTemplate">
+      {% include "yabase/app/notifications/notification.mustache" %}
+   </script>
 {% endif %}
 
 {% endblock %}
