added loading mask

--- a/yaapp/templates/yabase/app/notifications/notificationsPage.mustache
+++ b/yaapp/templates/yabase/app/notifications/notificationsPage.mustache
@@ -2,8 +2,9 @@
 <div class='row-fluid'>
 	<div class='span12'>
 	    <h1>{% trans "Notifications" %}</h1>
-        <ul id='notifications'></ul>
-        </div>
+        <ul id='notifications'>
+            <img class='loading-mask' src='/media/images/loading.gif'/>
+        </ul>    
         <div id='pagination'></div>
 	</div>
 </div>
