css skin on notifications

--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -208,3 +208,12 @@ ul .user-cell:hover .caption {
 #user-menu {
 	margin-top: 0px;
 }
+
+ul#notifications{
+    list-style: none;
+    margin-left:0;
+}
+
+.alert .date {
+	float:right;
+}
