--- a/yaapp/templates/yabase/app/notifications/notification.mustache
+++ b/yaapp/templates/yabase/app/notifications/notification.mustache
@@ -1,4 +1,5 @@
 {% load i18n %}
 <div class='alert alert-success'>
-<p><% date %> - <% text %></p>
+<div class='date'><strong><% formatted_date %></strong></div> 
+<% text %>
 </div>
