webapp : notifications wip
* added 3 tabs : read, unread & all
* added close button which marks notification as read or delete it

--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -217,3 +217,15 @@ ul#notifications{
 .alert .date {
 	float:right;
 }
+
+#notifications-toolbar {
+	margin-top:4px;
+	margin-bottom:12px;
+}
+
+ul#notifications li div {
+    font-weight: bold;
+}
+ul#notifications .read {
+	font-weight: normal;
+}
