--- a/yaapp/templates/yabase/app/notifications/notificationsPage.mustache
+++ b/yaapp/templates/yabase/app/notifications/notificationsPage.mustache
@@ -2,6 +2,10 @@
 <div class='row-fluid'>
 	<div class='span12'>
 	    <h1>{% trans "Notifications" %}</h1>
+	    
+        <div class="btn-group" data-toggle="buttons-radio" id='notifications-toolbar'>
+        </div>
+        	    
         <ul id='notifications'>
             <img class='loading-mask' src='/media/images/loading.gif'/>
         </ul>    
