--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -23,7 +23,7 @@
     <script type="text/javascript" src='/media/js/json2.js'></script>
     <script type="text/javascript" src='/media/js/mustache-django-friendly.js'></script>
     <script type="text/javascript" src='/media/js/ICanHaz-no-mustache.min.js'></script>
-    <script type="text/javascript" src='/media/js/underscore-1.3.1.js'></script>
+    <script type="text/javascript" src='/media/js/underscore-min.js'></script>
     <script type="text/javascript" src='/media/js/underscore.string.min.js'></script>
     <script type="text/javascript" src='/media/js/backbone-min.js'></script>
     <script type="text/javascript" src='/media/js/backbone-tastypie.js'></script>
@@ -128,6 +128,9 @@
 
    <script type="text/html" id="notificationMenuItemTemplate">
       {% include "yabase/app/notifications/notificationMenuItem.mustache" %}
+   </script>
+   <script type="text/html" id="notificationsToolbarTemplate">
+      {% include "yabase/app/notifications/notificationsToolbar.mustache" %}
    </script>
 {% endif %}
 
