--- a/yaapp/templates/yabase/app/home/homePage.mustache
+++ b/yaapp/templates/yabase/app/home/homePage.mustache
@@ -19,6 +19,7 @@
         </ul>
     </div>
 </div>
+{% if request.user.is_authenticated %}
 <div class='row-fluid'>
     <div class='span12'>
         <div class='page-header'>
@@ -30,3 +31,4 @@
         <div class='cell-pagination' id='pagination'></div>
     </div>
 </div>
+{% endif %}
