webapp: programming wip
added basic layout

--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -132,6 +132,10 @@
    <script type="text/html" id="notificationsToolbarTemplate">
       {% include "yabase/app/notifications/notificationsToolbar.mustache" %}
    </script>
+
+   <script type="text/html" id="programmingPageTemplate">
+      {% include "yabase/app/programming/programmingPage.mustache" %}
+   </script>
 {% endif %}
 
 {% endblock %}
