wip on programming

--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -198,6 +198,7 @@
 							<li><a href="{% url webapp_favorites %}" id='btn-favorites'>{% trans "My favorites" %}</a></li>
 							<li><a href="{% url webapp_friends %}" id='btn-friends'>{% trans "My friends" %}</a></li>
 	                        <li class="divider"></li>
+                            <li><a href="{% url webapp_programming %}" id='btn-programming'>{% trans "Radio programming" %}</a></li>
                             <li><a href="{% url webapp_profile request.user.username %}" id='btn-my-profile'>{% trans "My profile" %}</a></li>
                             <li><a href="{% url webapp_settings %}" id='btn-settings'>{% trans "Settings" %}</a></li>
                             <li class="divider"></li>
