--- a/yaapp/apps/yaweb/templates/yaweb/contest_station_terms.html
+++ b/yaapp/apps/yaweb/templates/yaweb/contest_station_terms.html
@@ -9,7 +9,7 @@
 <link href="/media/yaweb/css/elecsounds.css" rel="stylesheet" type="text/css" />
 <link rel="stylesheet" href="/media/bootstrap/css/bootstrap.min.css"/>
 <link rel="stylesheet" href="/media/css/style.css"/>
-<title>ElecSounds</title>
+<title>Concours Yasound</title>
 </head>
 <body>
 <div class='container-fluid'>
@@ -22,13 +22,13 @@
 
     <div class='row-fluid'>
         <div class='span12'>
-            <img src='/media/yaweb/images/elecsounds/elecsounds_2jours_medium.jpg' alt='Elecsounds medium logo'/>
+            <img src='/media/yaweb/images/station/station.jpg' alt="Jeu concours Station d'accueil"/>
         </div>
     </div>    
 
     
     <div class="page-header">
-    <h1>Pour jouer <small>du 23 avril au 4 mai 2012</small></h1>
+    <h1>Pour jouer <small>du 14 au 21 juin 2012</small></h1>
     </div>
     
     <div class='row-fluid'>
@@ -37,55 +37,26 @@
     Si vous avez un blog  et si vous souhaitez participer l’opération merci d’écrire à  <a href='mailto:astrid@yasound.com'>astrid@yasound.com</a>
     </div>
     
-    <h2>1. Choisissez l'un de ces blogs puis jouez :</h2>
+    <h2>1. Rendez-vous sur un des blogs suivants :</h2>
     
     <ul class='es-blogs'>
-       <li><a href='http://iphonesoft.fr/2012/04/23/l-elecsound-gagnez-un-ipad-3-64-go-participation-twitter' target='_blank'>iPhoneSoft</a> </li>
-       <li><a href='http://www.geekeriesdefilles.com/bons-plans-de-filles/concours/jeu-concours-gagnez-un-ipad-3-avec-yasound/' target='_blank'>Geekeries de filles</a> </li>
-       <li><a href='http://www.julientellouck.com/concours-le-nouvel-ipad-a-gagner-grace-a-yasound-et-julientellouck-com/' target='_blank'>Le blog de Julien Tellouck</a></li> 
-       <li><a href='http://www.weblife.fr/actus/gagner-un-ipad-3-avec-yasound-et-weblife-en-pariant-sur-le-resultat-des-presidentielles' target='_blank'>Weblife</a></li>
-       <li><a href='http://wearethemascotte.fr/elecsounds-gagnez-un-ipad-3-avec-yasound/' target='_blank'>Wearethemascote</a></li> 
-       <li><a href='http://insomniac.fr' target='_blank'>Insomniac</a></li>
-       <li><a href='http://business-actor.com/ipad-yasound/' target='_blank'>Business Actor</a></li>
-       <li><a href='http://www.urban-fusions.com/2012/04/gagnez-le-nouvel-ipad-sur-urban-fusions.html' target='_blank'>Urban Fusions</a></li>
-       <li><a href='http://www.insert-coin.fr/archive/2012/04/24/elecsounds-gagnez-un-ipad-3.html' target='_blank'>Insertcoin</a></li>
-       <li><a href='http://www.iphonophile.fr/gagner-un-nouvel-ipad-de-64-go-avec-yasound/' target='_blank'>iPhonophile</a></li>
-       <li><a href='http://www.sosiphone.com/blogiphone/2012/04/24/le-futur-president-de-la-republique-francaise-vous-fait-gagner-un-nouvel-ipad-64go-wifi-lte-52781/' target='_blank'>SOS iPhone</a></li>
-       <li><a href='http://www.lesdivagationsdecalipso.fr/et-si-on-gagnait-un-ipad/' target='_blank'>Les divagations de Calipso</a></li>
     </ul> 
     
     </div>
         
     <div class='row-fluid'>
-    <h2>2. Suivez le compte Twitter</h2>
-    <div id='es-follow'><a href="https://twitter.com/YasoundSAS" class="twitter-follow-button" data-show-count="false" data-lang="fr" data-size="large">Suivre @YasoundSAS</a>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-    </div>
-    </div>
-    
-    <div class='row-fluid'>
-    <h2>3. Publiez votre pronostic</h2>
-
+    <h2>2. Puis vous rendre sur la radio «NiNi$$ »</h2>
     <div class='es-right well'>
-        <p>* Remplacer "@blog.fr" par le compte twitter du blog que vous avez choisi, par exemple : <em>"je joue avec @YasoundSAS et @Weblifefr..."</em>
+        <p>* Remplacer "*Mon blog" par le blog que vous avez choisi
     </div>
+    <p class='lead'>présente dans la catégorie « Sélection » de l’application et y poster le message suivant :</p>
+
 <p class='lead'>
-Vous pensez que ce sera <a href='https://api.yasound.com/listen/29b1e874c84740958b0d4363654376ae' target="_blank">François Hollande</a> ?
-Publiez le message <strong>« Je joue avec @YasoundSAS et <em>@blog.fr*</em> pour gagner un iPad 3 64 G Wifi/4G. Je parie sur l’#élecsound de #Hollande »</strong>
+<strong>Je joue avec *Mon blog pour gagner une station d’accueil</strong>
 </p>
 
-<p class='lead'>Vous pensez que ce sera <a href='https://api.yasound.com/listen/6fa46bfa1f824879b503e2aebbff7411' target="_blank">Nicolas Sarkozy ?</a>
-Publiez le message <strong>« Je joue avec @YasoundSAS et <em>@blog.fr*</em> pour gagner un iPad 3 64 G Wifi/4G. Je parie sur l’#élecsound de #Sarkozy »</strong>
-</p>
+    </div>    
 
-    <h2>4. Le tirage au sort aura lieu le 7 mai</h2>
-    
-<p class='lead'>Le tirage au sort aura lieu le 7 mai parmi les participants 
-ayant trouvé le bon candidat et vous permettra à vous, ainsi qu’au blogueur choisi, de gagner un iPad3 64 Go Wifi 4G blanc ou noir
-</p> 
-    
-    
-    </div>
     <div class='row-fluid'>
     
     
@@ -97,19 +68,11 @@ ayant trouvé le bon candidat et vous permettra à vous, ainsi qu’au blogueur 
 
 
 <ul>
-<li>Tout tweet incomplet ne sera pas pris en compte</li>              
-<li>Jeu limité à 1 tweet par participant et par jour, du 23 avril au 4 mai</li>
 <li>Attention : la création de profils multiples pour participer au concours peut entrainer la suspension de tous vos comptes</li> 
 </ul>
     
     </div>
     
-    <div class='row-fluid'>
-        <div id='unlightbox'>
-            <a href='#'>Cliquez ici pour voir en plein écran</a>
-        </div>
-    </div>
-
 </div>
 </body>
 </html>
