--- a/yaapp/apps/yaweb/templates/yaweb/contest_station.html
+++ b/yaapp/apps/yaweb/templates/yaweb/contest_station.html
@@ -12,13 +12,9 @@
 <body>
 
 <div id="background">
-    <a href='{% url elecsounds_terms %}'><img src='/media/yaweb/images/elecsounds/elecsounds_2jours.jpg' class='stretch' alt='Jeu Elecsounds' width='1517' height='817'/></a>
+    <a href='{% url contest_station_terms %}'><img src='/media/yaweb/images/station/station.jpg' class='stretch' alt="Jeu Station d'accueil" width='728' height='300'/></a>
 </div>
 
-<a class="btn" id='nicolas' href="https://api.yasound.com/listen/6fa46bfa1f824879b503e2aebbff7411" target='_blank'>Ecouter sa radio</a>
-<a class="btn" id='francois' href="https://api.yasound.com/listen/29b1e874c84740958b0d4363654376ae" target='_blank'>Ecouter sa radio</a>
-
-<a class="btn" id='terms' href="{% url contest_station_terms %}">Détails du jeu concours</a>
 
 </body>
 </html>
