--- a/yaapp/templates/yabase/app/programming/programmingPage.mustache
+++ b/yaapp/templates/yabase/app/programming/programmingPage.mustache
@@ -1,6 +1,17 @@
 {% load i18n %}
 <div class='row-fluid'>
 <div class='span12'>
-    <h1>Hi, world</h1>
+    <h1>{% trans "Here comes you DJ" %}</h1>
+    <table class="table table-bordered table-striped">
+        <thead>
+            <tr>
+                <th>{% trans "Track" %}</th>
+                <th>{% trans "Album" %}</th>
+                <th>{% trans "Artist" %}</th>
+            </tr>
+        </thead>
+        <tbody id='song-instances'>
+        </tbody>
+    </table>
 </div>
 </div>
