--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -136,6 +136,9 @@
    <script type="text/html" id="programmingPageTemplate">
       {% include "yabase/app/programming/programmingPage.mustache" %}
    </script>
+   <script type="text/html" id="songInstanceCellTemplate">
+      {% include "yabase/app/programming/songInstanceCell.mustache" %}
+   </script>
 {% endif %}
 
 {% endblock %}
