updated contest terms

--- a/yaapp/apps/yaweb/templates/yaweb/contest_station_terms.html
+++ b/yaapp/apps/yaweb/templates/yaweb/contest_station_terms.html
@@ -45,31 +45,24 @@
     </div>
         
     <div class='row-fluid'>
-    <h2>2. Puis vous rendre sur la radio «NiNi$$ »</h2>
+    <h2>2. Ecoutez la radio «NiNi$$ »* et postez le message suivant :</h2>
     <div class='es-right well'>
-        <p>* Remplacer "*Mon blog" par le blog que vous avez choisi
+        <p>* Radio présente dans la catégorie « Sélection » de l’application</p>
+        <p>** Remplacer "Mon blog" par le blog que vous avez choisi</p>
     </div>
-    <p class='lead'>présente dans la catégorie « Sélection » de l’application et y poster le message suivant :</p>
-
 <p class='lead'>
-<strong>Je joue avec *Mon blog pour gagner une station d’accueil</strong>
+<em>Je joue avec Mon blog** pour gagner une station d’accueil</em>
 </p>
 
     </div>    
 
     <div class='row-fluid'>
     
-    
-    <h2>Informations utiles</h2>
-
     <div class='es-right well'>
         <p><a href='/media/documents/reglement-elecsounds.pdf'>Télécharger le règlement du jeu (pdf)</a></p>
     </div>
 
 
-<ul>
-<li>Attention : la création de profils multiples pour participer au concours peut entrainer la suspension de tous vos comptes</li> 
-</ul>
     
     </div>
     
