updated programming title

--- a/yaapp/templates/yabase/app/programming/programmingPage.mustache
+++ b/yaapp/templates/yabase/app/programming/programmingPage.mustache
@@ -1,7 +1,7 @@
 {% load i18n %}
 <div class='row-fluid'>
 <div class='span12'>
-    <h1>{% trans "Here comes you DJ" %}</h1>
+    <h1>{% trans "Programming" %}</h1>
     <table class="table table-bordered table-striped">
         <thead>
             <tr>
