removed logs, added loading mask

--- a/yaapp/templates/yabase/app/programming/programmingPage.mustache
+++ b/yaapp/templates/yabase/app/programming/programmingPage.mustache
@@ -11,6 +11,11 @@
             </tr>
         </thead>
         <tbody id='song-instances'>
+            <tr class='loading-mask'>
+                <td><img  src='/media/images/loading.gif'/></td>
+                <td></td>
+                <td></td>
+            </tr>
         </tbody>
     </table>
 </div>
