--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -136,8 +136,17 @@
    <script type="text/html" id="programmingPageTemplate">
       {% include "yabase/app/programming/programmingPage.mustache" %}
    </script>
+   <script type="text/html" id="songInstancesTemplate">
+      {% include "yabase/app/programming/songInstances.mustache" %}
+   </script>
    <script type="text/html" id="songInstanceCellTemplate">
       {% include "yabase/app/programming/songInstanceCell.mustache" %}
+   </script>
+   <script type="text/html" id="programmingToolbarTemplate">
+      {% include "yabase/app/programming/programmingToolbar.mustache" %}
+   </script>
+   <script type="text/html" id="importFromItunesTemplate">
+      {% include "yabase/app/programming/importFromItunes.mustache" %}
    </script>
 {% endif %}
 
