added terms for contest

--- a/yaapp/apps/yaweb/templates/yaweb/contest_station_terms.html
+++ b/yaapp/apps/yaweb/templates/yaweb/contest_station_terms.html
@@ -40,18 +40,19 @@
     <h2>1. Rendez-vous sur un des blogs suivants :</h2>
     
     <ul class='es-blogs'>
+    <li><a href='http://dueze.blogspot.ca/2012/06/webjouez-avec-yasound-et-remportez-une_14.html#links' target='_blank'>Dueze Blog</a></li>
     </ul> 
     
     </div>
         
     <div class='row-fluid'>
-    <h2>2. Ecoutez la radio «NiNi$$ »* et postez le message suivant :</h2>
+    <h2>2. Ecoutez la radio «NiNi$$ »* et poster ce message sur le mur de la radio :</h2>
     <div class='es-right well'>
         <p>* Radio présente dans la catégorie « Sélection » de l’application</p>
-        <p>** Remplacer "Mon blog" par le blog que vous avez choisi</p>
+        <p>** Remplacer "nom du blog" par le blog que vous avez choisi</p>
     </div>
 <p class='lead'>
-<em>Je joue avec Mon blog** pour gagner une station d’accueil</em>
+<em>Je joue avec <strong>nom du blog**</strong> pour gagner une station d’accueil</em>
 </p>
 
     </div>    
@@ -59,7 +60,7 @@
     <div class='row-fluid'>
     
     <div class='es-right well'>
-        <p><a href='/media/documents/reglement-elecsounds.pdf'>Télécharger le règlement du jeu (pdf)</a></p>
+        <p><a href='/media/documents/reglement-fete-musique.pdf'>Télécharger le règlement du jeu (pdf)</a></p>
     </div>
 
 
