--- a/yaapp/apps/yaweb/templates/yaweb/index.html
+++ b/yaapp/apps/yaweb/templates/yaweb/index.html
@@ -301,7 +301,7 @@ de styles et de nouveaux talents</td>
 <div id="puce3" class="puce" onclick="goToSlide(3)"></div>
 <div id="puce4" class="puce" onclick="goToSlide(4)"></div>
 </div>
-<div id="menu"><a href="/?flavour=mobile">Mobile</a> {% if not production_mode %}| <a href="{% url contest_station %}" class="boxed iframe">Concours</a>{% endif %} | <a href="{% url about %}">À propos de nous</a> | <a href="{% url jobs %}">Jobs</a> | <a href="{% url press %}">Presse</a> | <a href="{% url contact %}">Contact</a></div>
+<div id="menu"><a href="/?flavour=mobile">Mobile</a> | <a href="{% url contest_station %}" class="boxed iframe">Concours</a> | <a href="{% url about %}">À propos de nous</a> | <a href="{% url jobs %}">Jobs</a> | <a href="{% url press %}">Presse</a> | <a href="{% url contact %}">Contact</a></div>
 
 
 </div>
